--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <form class="form">
+        <input
+          class="query"
+          type="text"
+          name="query"
+          placeholder="Search images..."
+        />
+        <button class="submit" type="submit">Search</button>
+      </form>
+      <span class="loader"></span>
+      <ul class="gallery"></ul>
     </main>
-
-    <load src="./partials/footer.html" />
-
     <script type="module" src="./main.js"></script>
   </body>
 </html>
